# chatnerd

./: .env_example  .gitignore  Makefile  README copy.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
chatnerd/: __main__.py  chat.py  chatnerd.config.yml  chatnerd.models.yml  chatnerd.prompts.yml  config.py  retrieve.py
chatnerd/cli/: cli.py  cli_db.py  cli_projects.py  cli_utils.py  logging_setup.py
chatnerd/document_loaders/: document_loader.py
chatnerd/langchain/: chain_factory.py  chain_runnables.py  document_embedder.py  llm_factory.py  summarizer.py  tagger.py
chatnerd/lib/: enums.py  helpers.py
chatnerd/stores/: chroma_store.py  qdrant_store.py  status_store.py  store_factory.py
chatnerd/tools/: chat_logger.py
scripts/: kill.sh  test_batch.sh
